webook/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            # 这边要对应到 mysql 的数据库存储的位置
            # 通过 MySQL 的配置开源改这个目录
            - mountPath: /var/lib/mysql
              # 我 POD 里面有那么多 volume, 我要用哪个
              name: mysql-storage
          ports:
            - containerPort: 3306
      restartPolicy: Always
      # 我整个 POD 有哪些
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
