webook/k8s-webook-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
  # specification
spec:
# 副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
      # template 描述的是你的 POD 是怎么样的
  template:
    metadata:
      labels:
        app: webook
        # POD 的具体信息
    spec:
      containers:
        - name: webook
          image: registry.cn-hangzhou.aliyuncs.com/xiaoxin123/webook:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
