webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      # 你访问的端口
      port: 3309
      targetPort: 3306
      nodePort: 30002
  type: NodePort
#  externalIPs:
#    - 192.168.5.3
