webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  externalIPs:
    - 192.168.5.5
#  ClusterIP
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - protocol: TCP
      name: http
      port: 81
      targetPort: 8080
